# marty_format

./: .md-pp.base.options  CMakeLists.txt  README.md  README.md_  _gen-doc.bat  defs.h  enums.h  exceptions.h  internal_locale_info_impl_base.h  internal_processFormatStringImpl.h  internal_processFormatValuesImpl.h  locale_info.h  marty_format.h  marty_format_types.h  todo.md  todo.md_  utils.h
_enums/: FormatIndexType.txt  FormattingFlags.txt  FormattingOptionsFlags.txt  LocaleInfoDigitsType.txt  LocaleInfoSeparatorType.txt  LocaleInfoType.txt  LocaleInfoValueType.txt  NumeralSystem.txt  PositiveNumbersMode.txt  StdFilterType.txt  _generate_all.bat  enum-translations.json  tr.bat
_generators/: FormatIndexType.txt  FormattingFlags.txt  FormattingOptionsFlags.txt  LocaleInfoValueType.txt  _generate_all.bat  umba-enum-gen-options.txt
impl/: internal_locale_info_impl_base.h  internal_locale_info_impl_win.h  internal_processFormatStringImpl.h  internal_processFormatValuesImpl.h  simple_convert_impl.h  simple_convert_prototypes.h  value_format_prototypes.h
md_/: API.md_  FormattingFlags.md_  dependencies.md_  example_03.txt  example_04.txt  features.md_  filters_todo.txt  float_test_locale_output.txt  float_test_smp_output.txt  format_spec.md_  format_spec_grammar.txt  gammar.txt  input_iterator_sample_methods.cpp  integer_format_sampes.cpp  links.txt  locale_support.md_  reference_specs.md_  replacement_fields_gammar.txt  samples_output.txt  std_support.md_  type_specifiers.md_  type_specifiers_bool.md_  type_specifiers_floating.md_  type_specifiers_integer.md_  (+6 more)
(+77 files in other folders)
